--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,27 @@
 doctype html
-html.h-100
+html
   head
-    title RailsProjectLvl2
+    title
+      = t('site_title')
+    meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all',
+      'data-turbolinks-track': 'reload'
+    = stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+
   body.d-flex.flex-column.h-100
-    = render 'shared/nav'
-    main.flex-shrink-0
-      .container
+    - if flash[:notice].present?
+        .alert.alert-primary
+          = sanitize notice
+
+    - if flash[:alert].present?
+        .alert.alert-danger
+          = sanitize alert
+
+    .container.mb-2
+      .d-flex.flex-wrap.align-items-center.py-2.border-bottom
+        = render 'shared/nav'
+      .container.my-4
         = yield
-    = render 'shared/footer'
