--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,23 +1,15 @@
-header
-  nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
-    .container-fluid
-      a.navbar-brand[href="#"] Fixed navbar
-      button.navbar-toggler[type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"]
-        span.navbar-toggler-icon
-
-      #navbarCollapse.collapse.navbar-collapse
-        ul.navbar-nav.me-auto.mb-2.mb-md-0
-          li.nav-item
-            a.nav-link.active[aria-current="page" href="#"]
-              | Home
-          li.nav-item
-            a.nav-link[href="#"]
-              | Link
-          li.nav-item
-            a.nav-link.disabled[href="#" tabindex="-1" aria-disabled="true"]
-              | Disabled
-
-        form.d-flex
-          input.form-control.me-2[type="search" placeholder="Search" aria-label="Search"]
-          button.btn.btn-outline-success[type="submit"] Search
-
+.navbar.navbar-expand-md.navbar-light.me-auto
+  = link_to root_path
+    = image_tag 'logo.png', height: 30, width: 30, alt: t('home.logo_alt_text')
+ul.nav.nav-pills
+  - if user_signed_in?
+    li.nav-item.me-2
+      = link_to t('nav.signout'), destroy_user_session_path,
+        method: :delete, class: 'nav-link link-dark'
+  - else
+    li.nav-item.me-2
+      = link_to t('nav.login'), new_user_session_path,
+        class: 'nav-link link-dark'
+    li.nav-item.me-2
+      = link_to t('nav.signup'), new_user_registration_path,
+        class: 'nav-link link-dark'
