--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -9,7 +9,8 @@ h2
      required: true, autofocus: true,
      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
      input_html: { autocomplete: 'new-password' }
-    = f.input :password_confirmation, label: 'Confirm your new password', required: true, input_html: { autocomplete: 'new-password' }
+    = f.input :password_confirmation, label: 'Confirm your new password',
+      required: true, input_html: { autocomplete: 'new-password' }
   .form-actions
     = f.button :submit, 'Change my password', class: 'btn btn-primary mt-3'
 = render 'devise/shared/links'
