--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -4,6 +4,9 @@
 ul.nav.nav-pills
   - if user_signed_in?
     li.nav-item.me-2
+      = link_to t('nav.new_post'), new_post_path,
+        class: 'nav-link link-dark'
+    li.nav-item.me-2
       = link_to t('nav.signout'), destroy_user_session_path,
         method: :delete, class: 'nav-link link-dark'
   - else
