--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -2,3 +2,10 @@ h1 = @post.title
 
 p = @post.body
 p = @post.creator.email
+
+- if user_signed_in?
+  .lead.mb-3 = t('comment.title')
+  = render 'posts/comments/form', comment: @comment, parent_id: nil, url: post_comments_url(@post)
+
+- @post.comments.each do |comment|
+  = render 'posts/comments/comment', comment: comment unless comment.parent
