--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -5,7 +5,7 @@
   .form-inputs
     = f.input :title
     = f.input :body
-    = f.association :post_category
+    = f.association :category
 
   .form-actions
     = f.button :submit, t('.submit'), class: 'btn btn-primary mt-3'
