--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -5,8 +5,8 @@ p = @post.body
 .row.mb-2
   .col-auto.me-auto = @post.creator.email
   .col-auto
-    = @post.likes.count
-    - if @user_like
+    = @post.likes.size
+    - if @was_liked
         = link_to post_like_path(@post), method: :delete do
           i.bi.bi-hand-thumbs-up-fill.text-reset
     - else
@@ -17,5 +17,5 @@ p = @post.body
   .lead.mb-3 = t('comment.title')
   = render 'posts/comments/form', comment: @comment, parent_id: nil, url: post_comments_url(@post)
 
-- @post.comments.each do |comment|
-  = render 'posts/comments/comment', comment: comment unless comment.parent
+- @comments.each do |comment, children|
+  = render 'posts/comments/comment', post: @post, comment: comment, children: children unless comment.parent
